# msfs-geoshot

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.spec  pyproject.toml
assets/: flightsim_description.md
msfs_geoshot/: __init__.py  __main__.py  app.py  debug.py  metadata.py  names.py  sim.py  time.py  windows.py
msfs_geoshot/_resources/: license.md
msfs_geoshot/gui/: controller.py  credits.py  feedback.py  hotkeys.py  main_window.py  notification.py  settings.py  thumbnails.py  tray_icon.py  util.py  validators.py
msfs_screenshot_geotag/: __init__.py  __main__.py  app.py  exif.py  exif_service.py  metadata.py  names.py  screenshots.py  sim.py  sim_service.py  windows.py
msfs_screenshot_geotag/_bin/: exiftool_license.txt  license_exiftool.txt
msfs_screenshot_geotag/gui/: __init__.py  app.py  controller.py  credits.py  error_handler.py  hotkeys.py  keyedit.py  main_window.py  notification.py  screenshots.py  settings.py  threading.py  thumbnails.py  tray_icon.py  validators.py
packaging/: license_page.txt  pynsist .cfg  pynsist.cfg  pynsist.cfg.jinja  pynsist.nsi
qtdesigner/: feedback.ui  main_window.ui
tests/: test_msfs_screenshot_geotag.py
tools/: build_pynsist_config.py  build_ui.py  collect_licenses.sh
