[tool.poetry]
name = "msfs-screenshot-geotag"
version = "0.1.0"
description = ""
authors = ["placeholder <placeholder3433475435@placeholder43453.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
SimConnect = "^0.4.24"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
