[tool.poetry]
name = "msfs-screenshot-geotag"
version = "0.1.0"
description = ""
authors = ["placeholder <placeholder3433475435@placeholder43453.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
SimConnect = "^0.4.24"
psutil = "^5.8.0"
pyqtkeybind = "^0.0.8"
tzlocal = "^3.0"
geopy = "^2.2.0"
pathvalidate = "^2.4.1"
pywin32 = "^301"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
mypy = "^0.910"
flake8 = "^3.9.2"
pyinstaller = "^4.5.1"
types-tzlocal = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "win32gui",
    "win32process"
]
ignore_errors = true
